@@ -3,11 +3,11 @@
 lvconvert \- convert a logical volume from linear to mirror or snapshot
 .SH SYNOPSIS
 .B lvconvert
-\-m/\-\-mirrors Mirrors [\-\-mirrorlog {disk|core}] [\-\-corelog] [\-R/\-\-regionsize MirrorLogRegionSize]
-[\-A/\-\-alloc AllocationPolicy]
-[\-b/\-\-background] [\-i/\-\-interval Seconds]
-[\-h/\-?/\-\-help]
-[\-v/\-\-verbose]
+\-m|\-\-mirrors Mirrors [\-\-mirrorlog {disk|core}] [\-\-corelog] [\-R|\-\-regionsize MirrorLogRegionSize]
+[\-A|\-\-alloc AllocationPolicy]
+[\-b|\-\-background] [\-i|\-\-interval Seconds]
+[\-h|\-?|\-\-help]
+[\-v|\-\-verbose]
 [\-\-version]
 .br
 LogicalVolume[Path] [PhysicalVolume[Path]...]
@@ -15,10 +15,10 @@ LogicalVolume[Path] [PhysicalVolume[Path]...]
 
 .br
 .B lvconvert
-\-s/\-\-snapshot [\-c/\-\-chunksize ChunkSize]
-[\-h/\-?/\-\-help]
-[\-v/\-\-verbose]
-[\-Z/\-\-zero y/n]
+\-s|\-\-snapshot [\-c|\-\-chunksize ChunkSize]
+[\-h|\-?|\-\-help]
+[\-v|\-\-verbose]
+[\-Z|\-\-zero y|n]
 [\-\-version]
 .br
 OriginalLogicalVolume[Path] SnapshotLogicalVolume[Path]
@@ -68,7 +68,7 @@ existing logical volume as its origin.
 .I \-c, \-\-chunksize ChunkSize
 Power of 2 chunk size for the snapshot logical volume between 4k and 512k.
 .TP
-.I \-Z, \-\-zero y/n
+.I \-Z, \-\-zero y|n
 Controls zeroing of the first KB of data in the snapshot.
 If the volume is read-only the snapshot will not be zeroed.
 .br
