@@ -3,9 +3,9 @@
 lvmdiskscan \- scan for all devices visible to LVM2
 .SH SYNOPSIS
 .B lvmdiskscan
-[\-d/\-\-debug] [\-h/\-?/\-\-help] 
-[\-l/\-\-lvmpartition]
-[\-v/\-\-verbose]
+[\-d|\-\-debug] [\-h|\-?|\-\-help] 
+[\-l|\-\-lvmpartition]
+[\-v|\-\-verbose]
 .SH DESCRIPTION
 \fBlvmdiskscan\fP scans all SCSI, (E)IDE disks, multiple devices and a bunch
 of other block devices in the system looking for LVM physical volumes.
