@@ -3,10 +3,10 @@
 vgreduce \- reduce a volume group
 .SH SYNOPSIS
 .B vgreduce
-[\-a/\-\-all] [\-A/\-\-autobackup y/n] [\-d/\-\-debug] [\-h/\-?/\-\-help]
+[\-a|\-\-all] [\-A|\-\-autobackup y|n] [\-d|\-\-debug] [\-h|\-?|\-\-help]
 [\-\-removemissing]
-[\-t/\-\-test]
-[\-v/\-\-verbose] VolumeGroupName
+[\-t|\-\-test]
+[\-v|\-\-verbose] VolumeGroupName
 [PhysicalVolumePath...]
 .SH DESCRIPTION
 vgreduce allows you to remove one or more unused physical volumes
