@@ -3,11 +3,11 @@
 vgscan \- scan all disks for volume groups and rebuild caches
 .SH SYNOPSIS
 .B vgscan
-[\-d/\-\-debug] [\-h/\-?/\-\-help] 
+[\-d|\-\-debug] [\-h|\-?|\-\-help] 
 [\-\-ignorelockingfailure]
 [\-\-mknodes]
-[\-P/\-\-partial]
-[\-v/\-\-verbose]
+[\-P|\-\-partial]
+[\-v|\-\-verbose]
 .SH DESCRIPTION
 vgscan scans all SCSI, (E)IDE disks, multiple devices and a bunch
 of other disk devices in the system looking for LVM physical volumes
